# anki-vocab-gen

./: .pre-commit-config.yaml  README.md  data.py  defaults.py  main.py  pyproject.toml
