[project]
name = "anki-vocab-gen"
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "eng-to-ipa~=0.0.2",
    "pyqt5~=5.15",
    "nltk~=3.8",
    "pypinyin~=0.51.0",
]

[dependency-groups]
dev = [
    "mypy~=1.16",
    "PyQt5-stubs",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

